# b2box_Hugo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  clock.py  config.py  leader.py  main.py  net_guard.py  runtime.py  security.py
backend/app/api/: routes.py
backend/app/db/: models.py  session.py
backend/app/dedup/: fuzzy_text.py  image_hash.py  orchestrator.py  url_match.py
backend/app/integrations/: paco.py
backend/app/notifier/: dispatcher.py  email.py  webhook.py
backend/app/pricing/: competitor_check.py  diff.py  source_check.py
backend/app/scheduler/: jobs.py
backend/app/static/: .gitkeep  index.html  login.html
backend/app/vendure/: catalog.py  client.py
backend/tests/: test_dedup_gate.py  test_dedup_orchestrator.py  test_net_guard.py  test_pricing_diff.py  test_supabase_auth.py  test_vendure_concurrency.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: api.ts  icons.tsx  index.css  main.tsx  sections.ts  types.ts
frontend/src/components/: EventCard.tsx  EventsView.tsx  Header.tsx  HealthView.tsx  HistoryModal.tsx  MetricsRow.tsx  SettingsView.tsx  Sidebar.tsx  Thumb.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
