[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hugo"
version = "0.1.0"
description = "B2Box Hugo — catalog QC agent (anti-duplicates + price sync)"
requires-python = ">=3.10"
authors = [{ name = "B2Box", email = "tech@b2box.pro" }]
dependencies = [
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Settings & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.0",   # requerido por pydantic.EmailStr
    # GraphQL client (Vendure)
    "gql[httpx]>=3.5",
    "httpx>=0.27",
    # Deduplicación
    "imagehash>=4.3",      # perceptual hashing
    "Pillow>=10.2",        # imagenes
    "rapidfuzz>=3.6",      # fuzzy text
    # DB
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1",   # driver Postgres (para Supabase)
    # Scheduler
    "apscheduler>=3.10",
    # Email
    "aiosmtplib>=3.0",
    # Scraping (precios fuente / competidores)
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Utils
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
